community packages edits ; merge corrections

--- a/examples/Community Modeling/smetana/10-member_pairs.ipynb
+++ b/examples/Community Modeling/smetana/10-member_pairs.ipynb
@@ -48,37 +48,66 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'DEFAULT_SINKS' from 'modelseedpy.core.msbuilder' (C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\modelseedpy\\core\\msbuilder.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[2], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m YR343 \u001b[38;5;241m=\u001b[39m \u001b[43mkbase_api\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_from_ws\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mPantoea_YR343_pacbio_v2.RAST.fbamodel\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m114731\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m CF313 \u001b[38;5;241m=\u001b[39m kbase_api\u001b[38;5;241m.\u001b[39mget_from_ws(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mVariovorax_CF313_pacbio_v2.RAST.fbamodel\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;241m114731\u001b[39m)\n\u001b[0;32m      3\u001b[0m YR343_CF313_model \u001b[38;5;241m=\u001b[39m kbase_api\u001b[38;5;241m.\u001b[39mget_from_ws(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mYR343-CF313\u001b[39m\u001b[38;5;124m\"\u001b[39m,\u001b[38;5;241m114731\u001b[39m)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobrakbase\\kbaseapi.py:222\u001b[0m, in \u001b[0;36mKBaseAPI.get_from_ws\u001b[1;34m(self, id_or_ref, workspace)\u001b[0m\n\u001b[0;32m    220\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m    221\u001b[0m factory \u001b[38;5;241m=\u001b[39m KBaseObjectFactory()\n\u001b[1;32m--> 222\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mfactory\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcreate\u001b[49m\u001b[43m(\u001b[49m\u001b[43mres\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mNone\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobrakbase\\core\\kbase_object_factory.py:94\u001b[0m, in \u001b[0;36mKBaseObjectFactory.create\u001b[1;34m(self, ws_output, object_type)\u001b[0m\n\u001b[0;32m     93\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcreate\u001b[39m(\u001b[38;5;28mself\u001b[39m, ws_output, object_type):\n\u001b[1;32m---> 94\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbuild_object_from_ws\u001b[49m\u001b[43m(\u001b[49m\u001b[43mws_output\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mobject_type\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobrakbase\\core\\kbase_object_factory.py:89\u001b[0m, in \u001b[0;36mKBaseObjectFactory.build_object_from_ws\u001b[1;34m(self, ws_output, object_type)\u001b[0m\n\u001b[0;32m     86\u001b[0m info \u001b[38;5;241m=\u001b[39m KBaseObjectInfo(ws_data[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124minfo\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[0;32m     88\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m info \u001b[38;5;129;01mand\u001b[39;00m info\u001b[38;5;241m.\u001b[39mtype \u001b[38;5;129;01mand\u001b[39;00m info\u001b[38;5;241m.\u001b[39mtype \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mobject_mapper:\n\u001b[1;32m---> 89\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mobject_mapper\u001b[49m\u001b[43m[\u001b[49m\u001b[43minfo\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtype\u001b[49m\u001b[43m]\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minfo\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     91\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m KBaseObject(data, info, args)\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobrakbase\\core\\kbase_object_factory.py:22\u001b[0m, in \u001b[0;36m_build_model\u001b[1;34m(x, y, z)\u001b[0m\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_build_model\u001b[39m(x, y, z):\n\u001b[1;32m---> 22\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mFBAModelBuilder\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfrom_kbase_json\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mz\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mbuild()\n",
-      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobrakbase\\core\\kbasefba\\fbamodel_builder.py:54\u001b[0m, in \u001b[0;36mFBAModelBuilder.from_kbase_json\u001b[1;34m(data, info, args, auto_exchange)\u001b[0m\n\u001b[0;32m     51\u001b[0m b \u001b[38;5;241m=\u001b[39m FBAModelBuilder(copy\u001b[38;5;241m.\u001b[39mdeepcopy(data), info, args)\n\u001b[0;32m     53\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdrain_list\u001b[39m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;129;01min\u001b[39;00m data:\n\u001b[1;32m---> 54\u001b[0m     \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmodelseedpy\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcore\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmsbuilder\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DEFAULT_SINKS\n\u001b[0;32m     56\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m template_cpd_id \u001b[38;5;129;01min\u001b[39;00m DEFAULT_SINKS:\n\u001b[0;32m     57\u001b[0m         b\u001b[38;5;241m.\u001b[39mwith_sink(template_cpd_id \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m0\u001b[39m\u001b[38;5;124m\"\u001b[39m, DEFAULT_SINKS[template_cpd_id])\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'DEFAULT_SINKS' from 'modelseedpy.core.msbuilder' (C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\modelseedpy\\core\\msbuilder.py)"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ic| mssmetana.py:42 in _get_media()\n",
+      "    media: None\n",
+      "    com_model: <FBAModel AP49-BC15 at 0x2cb95315190>\n",
+      "    model_s_: [<FBAModel Sphingobium_AP49_pacbio_v2.RAST.fbamodel at 0x2cbab450ee0>,\n",
+      "               <FBAModel Bacillus_sp._bc15.RAST.fbamodel at 0x2cb958f5340>]\n",
+      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\medium\\minimal_medium.py:112: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "  medium = pd.Series()\n",
+      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\medium\\minimal_medium.py:112: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "  medium = pd.Series()\n",
+      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\medium\\minimal_medium.py:112: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
+      "  medium = pd.Series()\n"
      ]
     }
    ],
    "source": [
-    "YR343 = kbase_api.get_from_ws(\"Pantoea_YR343_pacbio_v2.RAST.fbamodel\", 114731)\n",
-    "CF313 = kbase_api.get_from_ws(\"Variovorax_CF313_pacbio_v2.RAST.fbamodel\",114731)\n",
-    "YR343_CF313_model = kbase_api.get_from_ws(\"YR343-CF313\",114731)\n",
-    "community_media = _get_media(None, YR343_CF313_model, [YR343, CF313])"
+    "AP49 = kbase_api.get_from_ws(\"Sphingobium_AP49_pacbio_v2.RAST.fbamodel\", 114731)\n",
+    "BC15 = kbase_api.get_from_ws(\"Bacillus_sp._bc15.RAST.fbamodel\", 114731)\n",
+    "AP49_BC15_model = kbase_api.get_from_ws(\"AP49-BC15\",114731)\n",
+    "community_media = _get_media(None, AP49_BC15_model, [AP49, BC15])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b9dc1d9c-1350-4e62-96b8-0f6987ee4761",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "modelseedpy.community.mscompatibility - CRITICAL - The original objective value 59.661439174773705 for Sphingobium_AP49_pacbio_v2.RAST.fbamodel does not equal the new objective value 0.0.\n",
+      "modelseedpy.community.mscompatibility - CRITICAL - The original objective value 169.73413926806492 for Bacillus_sp._bc15.RAST.fbamodel does not equal the new objective value 0.0.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The exchange  metabolite ID's of the model Sphingobium_AP49_pacbio_v2.RAST.fbamodel,Bacillus_sp._bc15.RAST.fbamodel are completely standardized to ModelSEED.\n"
+     ]
+    },
+    {
+     "ename": "ObjectiveError",
+     "evalue": "The model Sphingobium_AP49_pacbio_v2.RAST.fbamodel possesses an objective value of 0 in complete media, which is incompatible with minimal media computations and hence SMETANA.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mObjectiveError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m comm \u001b[38;5;241m=\u001b[39m \u001b[43mMSSmetana\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mAP49\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mBC15\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mAP49_BC15_model\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m comm\u001b[38;5;241m.\u001b[39mmp_score()\n",
+      "File \u001b[1;32m~\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\community\\mssmetana.py:90\u001b[0m, in \u001b[0;36mMSSmetana.__init__\u001b[1;34m(self, member_models, com_model, min_growth, n_solutions, environment, abstol, media_dict, printing, raw_content, antismash_json_path, antismash_zip_path, minimal_media_method)\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m model \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodels:\n\u001b[0;32m     89\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m model\u001b[38;5;241m.\u001b[39mslim_optimize() \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m---> 90\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m ObjectiveError(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe model \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel\u001b[38;5;241m.\u001b[39mid\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m possesses an objective value of 0 in complete media, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     91\u001b[0m                              \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwhich is incompatible with minimal media computations and hence SMETANA.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommunity\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mslim_optimize() \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     93\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ObjectiveError(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe community model \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommunity\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mid\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m possesses an objective value of 0 in complete \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     94\u001b[0m                          \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmedia, which is incompatible with minimal media computations and hence SMETANA.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[1;31mObjectiveError\u001b[0m: The model Sphingobium_AP49_pacbio_v2.RAST.fbamodel possesses an objective value of 0 in complete media, which is incompatible with minimal media computations and hence SMETANA."
+     ]
+    }
+   ],
    "source": [
-    "comm = MSSmetana([YR343, CF313], YR343_CF313_model)\n",
+    "comm = MSSmetana([AP49, BC15], AP49_BC15_model)\n",
     "comm.mp_score()"
    ]
   },
