gutting FBAHelper ; SMETANA edits

--- a/examples/Community Modeling/MSCompatibility/MSCompatibility.ipynb
+++ b/examples/Community Modeling/MSCompatibility/MSCompatibility.ipynb
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "606d8a74-6074-413b-bfa9-46b2eb365729",
    "metadata": {},
    "outputs": [
@@ -435,8 +435,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Andrew Freiburger\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\community\\mscompatibility.py:134: DeprecationWarning: invalid escape sequence \\w\n",
-      "  met_name = re.sub('_\\w\\d$', '', met.name)\n"
+      "modelseedpy.community.mscompatibility - CRITICAL - The original objective value 59.66143917485796 for Sphingobium_AP49_pacbio_v2.RAST.fbamodel does not equal the new objective value 0.0.\n"
      ]
     },
     {
@@ -447,7 +446,20 @@
       "\n",
       "\n",
       "Standardize exchange reactions in Sphingobium_AP49_pacbio_v2.RAST.fbamodel \n",
-      " =============================================================================\n",
+      " =============================================================================\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "modelseedpy.community.mscompatibility - CRITICAL - The original objective value 169.73413926806515 for Bacillus_sp._bc15.RAST.fbamodel does not equal the new objective value 0.0.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "\n",
       "\n",
       "\n",
@@ -458,8 +470,8 @@
     }
    ],
    "source": [
-    "%run ../../../modelseedpy/community/mscompatibility.py  # the static method logic\n",
-    "# from modelseedpy.community import MSCompatibility\n",
+    "# %run ../../../modelseedpy/community/mscompatibility.py  # the static method logic\n",
+    "from modelseedpy.community import MSCompatibility\n",
     "\n",
     "new_models = MSCompatibility.standardize(models, conflicts_file_name=\"orig_conflicts.json\")"
    ]
