--- a/examples/Community Modeling/smetana/10-member_pairs.ipynb
+++ b/examples/Community Modeling/smetana/10-member_pairs.ipynb
@@ -53,9 +53,9 @@
      "text": [
       "ic| mssmetana.py:42 in _get_media()\n",
       "    media: None\n",
-      "    com_model: <FBAModel AP49-BC15 at 0x2cb95315190>\n",
-      "    model_s_: [<FBAModel Sphingobium_AP49_pacbio_v2.RAST.fbamodel at 0x2cbab450ee0>,\n",
-      "               <FBAModel Bacillus_sp._bc15.RAST.fbamodel at 0x2cb958f5340>]\n",
+      "    com_model: <FBAModel AP49-BC15 at 0x1b3c61c3490>\n",
+      "    model_s_: [<FBAModel Sphingobium_AP49_pacbio_v2.RAST.fbamodel at 0x1b3dc3226a0>,\n",
+      "               <FBAModel Bacillus_sp._bc15.RAST.fbamodel at 0x1b3c67a2340>]\n",
       "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\medium\\minimal_medium.py:112: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
       "  medium = pd.Series()\n",
       "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\medium\\minimal_medium.py:112: FutureWarning: The default dtype for empty Series will be 'object' instead of 'float64' in a future version. Specify a dtype explicitly to silence this warning.\n",
@@ -74,6 +74,217 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "id": "857c0240-8cd3-433d-a44c-b192285a9207",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<strong><em>Optimal</em> solution with objective value 59.661</strong><br><div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fluxes</th>\n",
+       "      <th>reduced_costs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>rxn05561_c1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>3.401722e-15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rxn00247_c1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-3.977429e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rxn05625_c1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>-0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rxn02342_c1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>4.119158e-17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rxn01452_c1</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>9.601927e-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EX_cpd04097_e0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EX_cpd00098_e0</th>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EX_cpd00654_e0</th>\n",
+       "      <td>-787.142048</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EX_cpd00011_e0</th>\n",
+       "      <td>1000.000000</td>\n",
+       "      <td>-0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SK_cpd11416_c0</th>\n",
+       "      <td>119.322878</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2590 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<Solution 59.661 at 0x1b403c18c10>"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AP49_BC15_model.optimize()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8dbbb3dc-0eb7-4b46-b564-63a6d688a270",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<strong><em>Optimal</em> solution with objective value 0.000</strong><br><div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fluxes</th>\n",
+       "      <th>reduced_costs</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>rxn05561_c1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-4.271928e-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rxn00247_c1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rxn05625_c1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-4.271928e-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rxn02342_c1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>rxn01452_c1</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>-7.205600e-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EX_cpd03424_e0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EX_cpd04097_e0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EX_cpd00098_e0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EX_cpd00654_e0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>EX_cpd00011_e0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.844354e-17</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>2589 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<Solution 0.000 at 0x1b403c182e0>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "comm_model = AP49_BC15_model.copy()\n",
+    "comm_model.optimize()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "id": "b9dc1d9c-1350-4e62-96b8-0f6987ee4761",
    "metadata": {},
@@ -82,33 +293,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "modelseedpy.community.mscompatibility - CRITICAL - The original objective value 59.661439174773705 for Sphingobium_AP49_pacbio_v2.RAST.fbamodel does not equal the new objective value 0.0.\n",
-      "modelseedpy.community.mscompatibility - CRITICAL - The original objective value 169.73413926806492 for Bacillus_sp._bc15.RAST.fbamodel does not equal the new objective value 0.0.\n"
+      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\modelseedpy\\core\\msmodelutl.py:30: DeprecationWarning: invalid escape sequence \\d\n",
+      "  if re.search(\"^(cpd\\d+)\", metabolite.id):\n"
      ]
     },
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The exchange  metabolite ID's of the model Sphingobium_AP49_pacbio_v2.RAST.fbamodel,Bacillus_sp._bc15.RAST.fbamodel are completely standardized to ModelSEED.\n"
-     ]
-    },
-    {
-     "ename": "ObjectiveError",
-     "evalue": "The model Sphingobium_AP49_pacbio_v2.RAST.fbamodel possesses an objective value of 0 in complete media, which is incompatible with minimal media computations and hence SMETANA.",
+     "ename": "ModelError",
+     "evalue": "The AP49-BC15 objective value is corrupted by being copied.",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mObjectiveError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[3], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m comm \u001b[38;5;241m=\u001b[39m \u001b[43mMSSmetana\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mAP49\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mBC15\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mAP49_BC15_model\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m comm\u001b[38;5;241m.\u001b[39mmp_score()\n",
-      "File \u001b[1;32m~\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\community\\mssmetana.py:90\u001b[0m, in \u001b[0;36mMSSmetana.__init__\u001b[1;34m(self, member_models, com_model, min_growth, n_solutions, environment, abstol, media_dict, printing, raw_content, antismash_json_path, antismash_zip_path, minimal_media_method)\u001b[0m\n\u001b[0;32m     88\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m model \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodels:\n\u001b[0;32m     89\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m model\u001b[38;5;241m.\u001b[39mslim_optimize() \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m---> 90\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m ObjectiveError(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe model \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel\u001b[38;5;241m.\u001b[39mid\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m possesses an objective value of 0 in complete media, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     91\u001b[0m                              \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mwhich is incompatible with minimal media computations and hence SMETANA.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m     92\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommunity\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mslim_optimize() \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m     93\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ObjectiveError(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe community model \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommunity\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mid\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m possesses an objective value of 0 in complete \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m     94\u001b[0m                          \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmedia, which is incompatible with minimal media computations and hence SMETANA.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mObjectiveError\u001b[0m: The model Sphingobium_AP49_pacbio_v2.RAST.fbamodel possesses an objective value of 0 in complete media, which is incompatible with minimal media computations and hence SMETANA."
+      "\u001b[1;31mModelError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrun\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../../../modelseedpy/community/mssmetana.py\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m comm \u001b[38;5;241m=\u001b[39m \u001b[43mMSSmetana\u001b[49m\u001b[43m(\u001b[49m\u001b[43m[\u001b[49m\u001b[43mAP49\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mBC15\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mAP49_BC15_model\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;66;03m# comm.mp_score()\u001b[39;00m\n",
+      "File \u001b[1;32m~\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\community\\mssmetana.py:79\u001b[0m, in \u001b[0;36mMSSmetana.__init__\u001b[1;34m(self, member_models, com_model, min_growth, n_solutions, environment, abstol, media_dict, printing, raw_content, antismash_json_path, antismash_zip_path, minimal_media_method)\u001b[0m\n\u001b[0;32m     77\u001b[0m \u001b[38;5;66;03m# process the models\u001b[39;00m\n\u001b[0;32m     78\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodels \u001b[38;5;241m=\u001b[39m _compatibilize(member_models)\n\u001b[1;32m---> 79\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcommunity \u001b[38;5;241m=\u001b[39m \u001b[43mMSModelUtil\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcom_model\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;129;43;01mor\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mbuild_from_species_models\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodels\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcobra_model\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     80\u001b[0m \u001b[38;5;66;03m## define the environment\u001b[39;00m\n\u001b[0;32m     81\u001b[0m \u001b[38;5;28mprint\u001b[39m(com_model\u001b[38;5;241m.\u001b[39moptimize())\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\modelseedpy\\core\\msmodelutl.py:104\u001b[0m, in \u001b[0;36mMSModelUtil.__init__\u001b[1;34m(self, model)\u001b[0m\n\u001b[0;32m    102\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mcopy()\n\u001b[0;32m    103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m model\u001b[38;5;241m.\u001b[39mslim_optimize() \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmodel\u001b[38;5;241m.\u001b[39mslim_optimize():\n\u001b[1;32m--> 104\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m ModelError(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mThe \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mmodel\u001b[38;5;241m.\u001b[39mid\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m objective value is corrupted by being copied.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    105\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpkgmgr \u001b[38;5;241m=\u001b[39m MSPackageManager\u001b[38;5;241m.\u001b[39mget_pkg_mgr(model)\n\u001b[0;32m    106\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39matputl \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n",
+      "\u001b[1;31mModelError\u001b[0m: The AP49-BC15 objective value is corrupted by being copied."
      ]
     }
    ],
    "source": [
+    "%run ../../../modelseedpy/community/mssmetana.py\n",
     "comm = MSSmetana([AP49, BC15], AP49_BC15_model)\n",
-    "comm.mp_score()"
+    "# comm.mp_score()"
    ]
   },
   {
