--- a/examples/minimal_media.ipynb
+++ b/examples/minimal_media.ipynb
@@ -18,7 +18,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cobrakbase 0.2.8\n"
+      "cobrakbase 0.3.1\n"
      ]
     }
    ],
@@ -46,6 +46,16 @@
     "# prevent excessive warnings\n",
     "import warnings\n",
     "warnings.filterwarnings(action='once')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "6da0123d-889e-4046-add8-312190eafaac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "AP49_BC15_model = kbase_api.get_from_ws(\"AP49-BC15\",114731)"
    ]
   },
   {
@@ -481,6 +491,165 @@
    "source": [
     "%run ../modelseedpy/core/msminimalmedia.py\n",
     "minMedia = MSMinimalMedia.minimize_components(com_model)  #, environment=FBAHelper.convert_kbase_media(environment))\n",
+    "pprint(minMedia)\n",
+    "len(minMedia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ab1fe6e4-e97a-4ccd-8840-4cf87126b4e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Andrew Freiburger\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\core\\msminimalmedia.py:218: DeprecationWarning: invalid escape sequence \\[\n",
+      "  changed_reactions = [re.search(\"(?<=\\[\\')(.+)(?=\\'\\])\", change).group() for change in changes]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Definition of minimum objective time: 0.0033854166666666668 mins\n",
+      "Iteration 0\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\util\\solver.py:554: UserWarning: Solver status is 'infeasible'.\n",
+      "  warn(f\"Solver status is '{status}'.\", UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Optimization time: 0.04791666666666667 mins\n",
+      "{'EX_cpd00007_e0': 0.0022449273275746123,\n",
+      " 'EX_cpd00028_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00030_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00034_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00048_e0': 313.8132768801727,\n",
+      " 'EX_cpd00058_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00063_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00099_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00104_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00149_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00156_e0': 296.13941220607444,\n",
+      " 'EX_cpd00205_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00215_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00220_e0': 0.0016836954956716,\n",
+      " 'EX_cpd00254_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00322_e0': 0.04835970206750062,\n",
+      " 'EX_cpd00355_e0': 1000.0,\n",
+      " 'EX_cpd00393_e0': 0.0016836954957852868,\n",
+      " 'EX_cpd00793_e0': 0.0005612318318526377,\n",
+      " 'EX_cpd10515_e0': 0.0016836954957852868}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "AP49 = kbase_api.get_from_ws(\"Sphingobium_AP49_pacbio_v2.RAST.fbamodel\", 114731)\n",
+    "BC15 = kbase_api.get_from_ws(\"Bacillus_sp._bc15.RAST.fbamodel\", 114731)\n",
+    "AP49_BC15_model = kbase_api.get_from_ws(\"AP49-BC15\",114731)\n",
+    "\n",
+    "%run ../modelseedpy/core/msminimalmedia.py\n",
+    "minMedia = MSMinimalMedia.determine_min_media(AP49_BC15_model)\n",
+    "pprint(minMedia)\n",
+    "len(minMedia)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a12fcf2f-999e-478f-84d3-19f69482ecc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Andrew Freiburger\\Documents\\Argonne\\ModelSEED\\ModelSEEDpy\\modelseedpy\\core\\msminimalmedia.py:218: DeprecationWarning: invalid escape sequence \\[\n",
+      "  changed_reactions = [re.search(\"(?<=\\[\\')(.+)(?=\\'\\])\", change).group() for change in changes]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Definition of minimum objective time: 0.003125 mins\n",
+      "Iteration 1\r"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Andrew Freiburger\\AppData\\Local\\Programs\\Python\\Python39\\lib\\site-packages\\cobra\\util\\solver.py:554: UserWarning: Solver status is 'infeasible'.\n",
+      "  warn(f\"Solver status is '{status}'.\", UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Optimization time: 0.3692708333333333 mins\n",
+      "{'EX_cpd00007_e0': 0.0022449273275746123,\n",
+      " 'EX_cpd00023_e0': 1.1368683772161603e-13,\n",
+      " 'EX_cpd00028_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00030_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00034_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00048_e0': 235.70361146821722,\n",
+      " 'EX_cpd00058_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00063_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00099_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00104_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00149_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00156_e0': 0.14664687099013918,\n",
+      " 'EX_cpd00205_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00215_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00220_e0': 0.0016836954956716,\n",
+      " 'EX_cpd00254_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd00322_e0': 0.04835970206750062,\n",
+      " 'EX_cpd00355_e0': 700.0795508177364,\n",
+      " 'EX_cpd00393_e0': 0.0016836954956716,\n",
+      " 'EX_cpd00793_e0': 0.0005612318319663245,\n",
+      " 'EX_cpd10516_e0': 0.0016836954957852868}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "21"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%run ../modelseedpy/core/msminimalmedia.py\n",
+    "minMedia = MSMinimalMedia.minimize_components(AP49_BC15_model)\n",
     "pprint(minMedia)\n",
     "len(minMedia)"
    ]
